--- a/public/css/auth-custom.css
+++ b/public/css/auth-custom.css
@@ -84,6 +84,21 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
     transition: border-color .15s;
 }
 
+.auth-page .alert {
+    padding: .5rem 1rem;
+    margin-bottom: .75rem;
+    font-size: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.auth-page .alert .btn-close {
+    position: relative;
+    padding: 0rem;
+    margin-left: .5rem;
+}
+
 .forgot-password-page .wrap .login-wrap {
     width: 100% !important;
 }
