--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -24,6 +24,13 @@
 	background-color: rgba(0, 0, 0, .4);
 }
 
+/* active or focus */
+:active, :focus {
+	outline: none !important;
+	box-shadow: none !important;
+	-webkit-tap-highlight-color: transparent !important;
+}
+
 a[title]:after {
 	border-radius: 3px !important;
 }
@@ -264,6 +271,21 @@ input.is-invalid~.input-group-append .input-group-text,
 	border-radius: .25rem !important;
 }
 
+/* dashboard index */
 .dashboard-index .small-box {
 	border-radius: 10px;
+}
+
+/* role index */
+.roles-index .table.datatable .permissions {
+	width: 360px;
+}
+
+/* role show */
+.roles-show .permissions {
+	margin-top: 40px;
+	background-color: #f5f5f5;
+	border: 1px solid #e1e1e1;
+	border-radius: 10px;
+	padding: 1em;
 }
